added a lock around keymap uses to avoid a reload in the middle of the key event process this fixes bug #1177

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21881 a95241bf-73f2-0310-859d-f6bbb57e9c96